[metadata]
name = oqp
version = 0.0.1
license_file = LICENSE
description = Companion project for DVC
long_description = file: README.md
long_description_content_type = text/markdown
author = Éric Lemoine
author_email = eric_lemoine@ultimatesoftware.com
url = http://github.com/elemoine/oqp
keywords = peopledoc, machine learning, versioning, dvc
classifiers =
    Programming Language :: Python :: 3
python_requires = >=3.6

[options]
zip_safe = True
include_package_data = True
packages = oqp
install_requires =

[options.packages.find]
exclude =
    tests

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 88
